<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">P2PTester</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="hang_up">Hang up</string>
    <string name="start_h264">Start H264</string>
    <string name="mediastarme">MediaStarme</string>
    <string name="phone_monitoring">PHONE MONITORING</string>
    <string name="start_record">Start Record</string>
    <string name="stop_record">Stop Record</string>
    <string name="play_aac">play AAC</string>
    <string name="accept">接收</string>
    <string name="cancel">取消</string>
    <string name="outside_call_info">办公室外: \n %1$s来电</string>
    <string name="video_recorder">摄像机</string>
    <string name="photo">照片</string>
    <string name="tape">录相</string>
    <string name="about">关于</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
