<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".ActivityDoor">

    <Button
        android:id="@+id/clooud_unlock"
        android:layout_width="68dp"
        android:layout_height="68dp"
        android:background="@drawable/unlock"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="64dp"
        tools:layout_editor_absoluteX="107dp"
        tools:layout_editor_absoluteY="139dp" />

    <TextView
        android:id="@+id/door_info"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:text="@string/outside_call_info"
        android:textSize="16dip"
        app:layout_constraintTop_toBottomOf="@id/clooud_unlock"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="32dp"
        tools:layout_editor_absoluteX="111dp"
        tools:layout_editor_absoluteY="306dp" />

    <Button
        android:id="@+id/door_accept"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:background="@drawable/green_block"
        android:text="@string/accept"
        app:layout_constraintTop_toBottomOf="@id/door_info"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="32dp"
        tools:layout_editor_absoluteX="146dp"
        tools:layout_editor_absoluteY="404dp" />

    <Button
        android:id="@+id/door_cancel"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:background="@drawable/red_block"
        android:text="@string/cancel"
        app:layout_constraintTop_toBottomOf="@id/door_accept"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        tools:layout_editor_absoluteX="146dp"
        tools:layout_editor_absoluteY="468dp" />

    <View
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@id/door_cancel"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_height="30dp" />


</android.support.constraint.ConstraintLayout>